# fazle-ai-health-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: config.py  exceptions.py  main.py  schemas.py  tracing.py
app/routers/: health.py  mcp_info.py  metrics.py
