[project]
name = "fazle-ai-health-api"
version = "0.1.0"
description = "Production-grade AI Health API — freelance portfolio proof"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "httpx>=0.27.0",
    "langfuse>=4.0.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
